examples/test/testpolicy10851.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10851
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key6: value41
      key46: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value42
          key21: value14
          key46: value0
      podSelector:
        matchLabels:
          key47: value14
          key48: value44
          key40: value15
